--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: dev # Ativa o perfil de desenvolvimento (application-dev.yml)
   application:
     name: sus-triage-api
 
