--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ spring:
     port: 5672
     username: guest
     password: guest
+    virtual-host: /
 
   # Configuração do Redis
   data:
@@ -53,3 +54,10 @@ springdoc:
 
 server:
   port: 8081
+
+logging:
+  level:
+    org.springframework.amqp: DEBUG
+    org.springframework.amqp.rabbit.listener: DEBUG
+    com.tech.sus_triage_api.service.rabbitmq: DEBUG
+    org.springframework.rabbit: DEBUG
