implementando fluxo da fila dlq e retry, adicionando info no readme

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,6 +36,15 @@ spring:
     username: guest
     password: guest
     virtual-host: /
+    listener:
+      simple:
+        retry:
+          enabled: true
+          max-attempts: 3
+          initial-interval: 2000
+          multiplier: 2.0
+          max-interval: 10000
+        default-requeue-rejected: false
 
   # Configuração do Redis
   data:
