--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,6 +38,8 @@ spring:
     virtual-host: /
     listener:
       simple:
+        concurrency: 3        # Mínimo de 3 consumers simultâneos
+        max-concurrency: 10   # Escala até 10 consumers se necessário
         retry:
           enabled: true
           max-attempts: 3
